# Stratego

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.sh
src/Client/: CMakeLists.txt
src/Server/: CMakeLists.txt  main.cc
src/client/: CMakeLists.txt  main.cc  piece.cc  piece.h
src/client/libs/: board.cpp  board.h
src/common/: board.cc  board.h  piece.cc  piece.h  protocol.cpp  protocol.h
src/server/: CMakeLists.txt  main.cc  server_board.cc  server_board.h
